# Airbnb_Clone_Django

./: # 노마드코더 장고 강의 필기(4강).txt  .env  8강 필기.md  db.sqlite3  pyproject.toml  복붙.ㅡㅇ
bookings/: admin.py  models.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py  0002_initial.py  0003_initial.py  0004_initial.py
categories/: urls.py  views.py
categories/migrations/: 0001_initial.py
config/: authentication.py  settings.py  urls.py
direct_messages/: apps.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_message_room_alter_message_user.py  0002_initial.py
experiences/: admin.py  apps.py  models.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py  0002_initial.py  0003_alter_experience_category_alter_experience_host_and_more.py  0003_alter_perk_details_alter_perk_explanation.py
medias/: models.py  serializers.py  urls.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room.py  0002_initial.py  0003_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py  0002_initial.py  0003_initial.py
rooms/: admin.py  models.py  serializer.py  serializers.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_alter_amenity_description.py  0002_initial.py  0003_room_name.py  (+3 more)
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: admin.py  apps.py  urls.py  views.py
(+5 files in other folders)
